fix line wrapping issue
git-svn-id: https://plugins.svn.wordpress.org/addthis/trunk@554942 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/options-page.css
+++ b/css/options-page.css
@@ -92,7 +92,7 @@ ul.nav-tab-wrapper li.ui-tabs-selected{
 	margin-left: 20px;
 }
 .form-table tr th h2{
-    width: 222px;
+    width: 240px;
 }
 
 
